--- a/package.json
+++ b/package.json
@@ -12,30 +12,37 @@
     "start": "npm run start:dev",
     "start:dev": "webpack serve --config webpack/webpack.config.js --env env=dev",
     "start:prod": "webpack serve --config webpack/webpack.config.js --env env=prod",
-    "lint": "echo \"TODO: eslint [options] [file|dir|glob]*\" && exit 1",
-    "test": "echo \"TODO: jest --watch --verbose --coverage\" && exit 1"
+    "test": "jest --verbose --coverage",
+    "test:watch": "jest --watch --verbose --coverage",
+    "lint": "echo \"TODO: eslint [options] [file|dir|glob]*\" && exit 1"
   },
   "dependencies": {
+    "jest-environment-jsdom": "^28.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.2",
+    "@babel/core": "^7.18.5",
     "@babel/plugin-transform-runtime": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.17.12",
     "@babel/runtime": "^7.18.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
+    "babel-jest": "^28.1.1",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.1",
     "react-refresh": "^0.13.0",
     "sass": "^1.52.1",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
+    "ts-jest": "^28.0.5",
     "typescript": "^4.7.2",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
