--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "app-title",
+  "name": "website",
   "version": "0.1.0",
   "description": "",
   "author": "",
   "license": "",
-  "main": "",
   "scripts": {
     "build": "npm run build:dev",
     "build:dev": "webpack --config webpack/webpack.config.js --env env=dev --stats-children",
@@ -17,7 +16,6 @@
     "lint": "echo \"TODO: eslint [options] [file|dir|glob]*\" && exit 1"
   },
   "dependencies": {
-    "jest-environment-jsdom": "^28.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
@@ -38,6 +36,7 @@
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "react-refresh": "^0.13.0",
     "sass": "^1.52.1",
     "sass-loader": "^13.0.0",
